View Issue Details

IDProjectCategoryView StatusLast Update
0031881CommunityOCCT:Codingpublic2020-12-02 17:13
Reportercraffael Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformMacOSOS 
Product Version7.1.0 
Target Version7.5.0Fixed in Version7.5.0 
Summary0031881: Coding Rules - OpenGl_HaltonSampler::initRandom() uses deprecated in C++14 function std::random_shuffle
DescriptionThe Method OpenGl_HaltonSampler::initRandom() in the file src/OpenGl/OpenGl_HaltonSampler.hxx:163 uses the deprecated function std::random_shuffle.

Since std::random_shuffle has been removed in C++17, initRandom() can fail to compile in c++17. It actually does so for macos 10.15 using the clang compiler in C++17 mode.
Steps To ReproduceTry to compile OCCT under macos 10.15 in c++17 mode.
TagsNo tags attached.
Test case numberNot required

Relationships

related to 0031940 closedbugmaster Community Foundation Classes - TCollection_ExtendedString::Print() corrupts UNICODE strings and does not compile with C++20 
child of 0027607 closedkgv Open CASCADE Visualization - Implement adaptive screen space sampling in path tracing 

Activities

craffael

2020-10-26 22:47

reporter   ~0096284

See also https://en.cppreference.com/w/cpp/algorithm/random_shuffle

git

2020-10-27 07:54

administrator   ~0096286

Branch CR31881 has been created by kgv.

SHA-1: 825edbaf8cc1bda2b6f39dee11b4f5018e7fe753


Detailed log of new commits:

Author: kgv
Date: Tue Oct 27 07:57:36 2020 +0300

    0031881: Coding Rules - OpenGl_HaltonSampler::initRandom() uses deprecated in C++14 function std::random_shuffle
    
    Unused function has been removed.

kgv

2020-10-27 09:42

developer   ~0096289

Please raise the patch
- OCCT branch: CR31881.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31881-master-KGV/

bugmaster

2020-10-31 12:48

administrator   ~0096420

Combination -
OCCT branch : OCCT-750
master SHA - a8b9d7eb277d4ce8949427b7c6ab6af92422ae83
a206de37fbfa0bf71bd534ae47192bbec23b8522
Products branch : OCCT-750 SHA - d1791aa18ab401708974b4c974aba57dc55acaa7
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17977.46000000013 / 17994.53000000008 [-0.09%]
Products
Total CPU difference: 12143.270000000102 / 12171.670000000115 [-0.23%]
Windows-64-VC14:
OCCT
Total CPU difference: 19728.796875 / 19728.265625 [+0.00%]
Products
Total CPU difference: 13560.6875 / 13538.390625 [+0.16%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2020-11-05 15:59

administrator   ~0096561

Branch CR31881 has been deleted by inv.

SHA-1: 825edbaf8cc1bda2b6f39dee11b4f5018e7fe753

Related Changesets

occt: master aa7e9f8d

2020-10-27 04:57:36

kgv


Committer: bugmaster Details Diff
0031881: Coding Rules - OpenGl_HaltonSampler::initRandom() uses deprecated in C++14 function std::random_shuffle

Unused function has been removed.
Affected Issues
0031881
mod - src/OpenGl/OpenGl_HaltonSampler.hxx Diff File
mod - src/OpenGl/OpenGl_TileSampler.cxx Diff File

Issue History

Date Modified Username Field Change
2020-10-26 22:47 craffael New Issue
2020-10-26 22:47 craffael Assigned To => kgv
2020-10-26 22:47 craffael Note Added: 0096284
2020-10-27 07:21 kgv Relationship added child of 0027607
2020-10-27 07:23 kgv Category OCCT:Visualization => OCCT:Coding
2020-10-27 07:23 kgv Product Version 7.4.0 => 7.1.0
2020-10-27 07:23 kgv Target Version => 7.6.0
2020-10-27 07:23 kgv Summary OpenGl_HaltonSampler::initRandom() uses deprecated function std::random_shuffle => Coding Rules - OpenGl_HaltonSampler::initRandom() uses deprecated in C++14 function std::random_shuffle
2020-10-27 07:23 kgv Additional Information Updated
2020-10-27 07:54 git Note Added: 0096286
2020-10-27 07:55 kgv Target Version 7.6.0 => 7.5.0
2020-10-27 09:42 kgv Note Added: 0096289
2020-10-27 09:42 kgv Assigned To kgv => bugmaster
2020-10-27 09:42 kgv Status new => resolved
2020-10-27 09:42 kgv Status resolved => reviewed
2020-10-31 12:48 bugmaster Note Added: 0096420
2020-10-31 12:48 bugmaster Status reviewed => tested
2020-10-31 12:50 bugmaster Test case number => Not required
2020-10-31 12:54 bugmaster Changeset attached => occt master aa7e9f8d
2020-10-31 12:54 bugmaster Status tested => verified
2020-10-31 12:54 bugmaster Resolution open => fixed
2020-11-05 15:59 git Note Added: 0096561
2020-11-18 11:46 kgv Relationship added related to 0031940
2020-12-02 16:22 emo Fixed in Version => 7.5.0
2020-12-02 17:13 emo Status verified => closed